V0.3.15 - more second in command officers